[metadata]
license_files = LICENSE

[flake8]
max-line-length = 90
max-complexity = 18
extend-ignore = E203, E266, E501, E731, B903

[tool:pytest]
filterwarnings =
    # warnings are errors
    error
    # marshmallow-sqlalchemy triggers this on sqlalchemy 2.0
    ignore:The Query\.get\(\) method is considered legacy:sqlalchemy.exc.LegacyAPIWarning
    # marshmallow triggers this when we test on marshmallow version 3.0
    ignore:distutils Version classes are deprecated\. Use packaging.version instead\.:DeprecationWarning:marshmallow
